Implement rails-api-adapter for Auth.js (#242)
* save

* save

* camelcase to snake case

* i made progress

* i made progress

* shrug

* i made progress

* i am going to bed

* user not found

* bearer invalid'

* finally all tests pass

* openapi ysaml

* going to sleep for real now

* save

* omg! i got auth.js actually working with my rails api for session creation and login. todo: delete session

* added jti

* delete rails.logger

* save

* rails api sign in + rails api authenticate

* save

* DRY

* fixing tests

* progresso

* fixed users_controller specs

* fixed tests + regenerated api

* lint

* restructure files under @/lib

* consolidate

* api-mock-setup
