# backend/config/routes.rb
@@ -13,13 +13,21 @@ Rails.application.routes.draw do
   devise_for :users,
              path: 'api/v1/auth',
              controllers: {
-               sessions: 'api/v1/auth/sessions',
                registrations: 'api/v1/auth/registrations'
              }
 
+  devise_scope :user do
+    post 'api/v1/auth/session', to: 'api/v1/auth/sessions#create'
+    get 'api/v1/auth/session', to: 'api/v1/auth/sessions#show'
+    put 'api/v1/auth/session', to: 'api/v1/auth/sessions#update'
+    delete 'api/v1/auth/session', to: 'api/v1/auth/sessions#destroy'
+  end
+
   namespace :api, defaults: { format: :json } do
     namespace :v1 do
+      post 'users/authorize', to: 'users#authorize'
       get 'users/me', to: 'users#me'
+
       resources :users, only: %i[index show create destroy update] do
         member do
           patch 'password', to: 'users#patch_password'
